--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
           DISCORD
         </a>
         <a href="#" class="connect-btn">
-          <img
-            src="./imgs/wallet-2.svg"
-            alt="connect wallet icon"
-          />
+          <img src="./imgs/wallet-2.svg" alt="connect wallet icon" />
           CONNECT
         </a>
       </div>
@@ -262,33 +259,33 @@
           </div>
         </section>
         <section class="how-to-container">
-            <h2 class="how-to-heading">
-              HOW TO <mark class="color-highlight">BINABOX</mark> WORK
-            </h2>
-            <article class="how-to-cards">
-              <ul class="how-to-card-list">
-                <li class="how-to-card-item glow-container">
-                  <img src="./imgs/card-one.svg" alt="step1 icon" />
-                  <h3 class="how-to-card-steps color-highlight">STEP 1</h3>
-                  <p class="how-to-card-text">Connect Your Wallet</p>
-                </li>
-                <li class="how-to-card-item">
-                  <img src="./imgs/card-two.svg" alt="step2 icon" />
-                  <h3 class="how-to-card-steps color-highlight">STEP 2</h3>
-                  <p class="how-to-card-text">Select Your Quality</p>
-                </li>
-                <li class="how-to-card-item">
-                  <img src="./imgs/card-three.svg" alt="step3 icon" />
-                  <h3 class="how-to-card-steps color-highlight">STEP 3</h3>
-                  <p class="how-to-card-text">Confirm The Transaction</p>
-                </li>
-                <li class="how-to-card-item">
-                  <img src="./imgs/card-four.svg" alt="step4 icon" />
-                  <h3 class="how-to-card-steps color-highlight">STEP 4</h3>
-                  <p class="how-to-card-text">Receive Your NFTs</p>
-                </li>
-              </ul>
-            </article>
+          <h2 class="how-to-heading">
+            HOW TO <mark class="color-highlight">BINABOX</mark> WORK
+          </h2>
+          <article class="how-to-cards">
+            <ul class="how-to-card-list">
+              <li class="how-to-card-item glow-container">
+                <img src="./imgs/card-one.svg" alt="step1 icon" />
+                <h3 class="how-to-card-steps color-highlight">STEP 1</h3>
+                <p class="how-to-card-text">Connect Your Wallet</p>
+              </li>
+              <li class="how-to-card-item">
+                <img src="./imgs/card-two.svg" alt="step2 icon" />
+                <h3 class="how-to-card-steps color-highlight">STEP 2</h3>
+                <p class="how-to-card-text">Select Your Quality</p>
+              </li>
+              <li class="how-to-card-item">
+                <img src="./imgs/card-three.svg" alt="step3 icon" />
+                <h3 class="how-to-card-steps color-highlight">STEP 3</h3>
+                <p class="how-to-card-text">Confirm The Transaction</p>
+              </li>
+              <li class="how-to-card-item">
+                <img src="./imgs/card-four.svg" alt="step4 icon" />
+                <h3 class="how-to-card-steps color-highlight">STEP 4</h3>
+                <p class="how-to-card-text">Receive Your NFTs</p>
+              </li>
+            </ul>
+          </article>
         </section>
         <section class="road-map-container">
           <h2 class="road-map-heading">ROAD MAP</h2>
@@ -296,8 +293,14 @@
             <figure class="road-map-imgs">
               <img src="./imgs/roadmap-1.jpg" alt="descriptive alt goes here" />
               <div class="road-map-inner-imgs">
-                <img src="./imgs/roadmap-2.jpg" alt="descriptive alt goes here" />
-                <img src="./imgs/roadmap-3.jpg" alt="descriptive alt goes here" />
+                <img
+                  src="./imgs/roadmap-2.jpg"
+                  alt="descriptive alt goes here"
+                />
+                <img
+                  src="./imgs/roadmap-3.jpg"
+                  alt="descriptive alt goes here"
+                />
               </div>
             </figure>
             <section class="road-map-stage-info">
@@ -306,31 +309,19 @@
               </h3>
               <ul class="road-map-details">
                 <li class="road-map-details-item">
-                  <img
-                    src="./imgs/road-map-logo.svg"
-                    alt=""
-                  />
+                  <img src="./imgs/road-map-logo.svg" alt="" />
                   <p class="road-map-text">Befriending & Chat Functions</p>
                 </li>
                 <li class="road-map-details-item">
-                  <img
-                    src="./imgs/road-map-logo.svg"
-                    alt=""
-                  />
+                  <img src="./imgs/road-map-logo.svg" alt="" />
                   <p class="road-map-text">Challenging Feature</p>
                 </li>
                 <li class="road-map-details-item">
-                  <img
-                    src="./imgs/road-map-logo.svg"
-                    alt=""
-                  />
+                  <img src="./imgs/road-map-logo.svg" alt="" />
                   <p class="road-map-text">Corsair Wheel</p>
                 </li>
                 <li class="road-map-details-item">
-                  <img
-                    src="./imgs/road-map-logo.svg"
-                    alt=""
-                  />
+                  <img src="./imgs/road-map-logo.svg" alt="" />
                   <p class="road-map-text">Mobile Version Launch</p>
                 </li>
               </ul>
@@ -338,13 +329,19 @@
             </section>
           </div>
           <form class="phase-slider-container">
-            <button class="back-arrow-btn">
-              <img
-                src="./imgs/arrow-left-1.svg"
-                alt="arrow left"
-              />
+            <label class="hidden-heading" for="back-arrow-btn"
+              >Back Arrow Button</label
+            >
+            <button
+              id="back-arrow-btn"
+              class="back-arrow-btn"
+              aria-label="Back Arrow"
+            >
+              <img src="./imgs/arrow-left-1.svg" alt="Arrow left" />
             </button>
-            <ol class="phase-line">
+
+            <label class="hidden-heading" for="phase-line">Phase Line</label>
+            <ol id="phase-line" class="phase-line">
               <li class="phase-stage">
                 <div class="phase-ellipse"></div>
                 <p>PHASE 1</p>
@@ -362,11 +359,16 @@
                 <p>PHASE 4</p>
               </li>
             </ol>
-            <button class="forward-arrow-btn">
-              <img
-                src="./imgs/arrow-right-1.svg"
-                alt="arrow right"
-              />
+
+            <label class="hidden-heading" for="forward-arrow-btn"
+              >Forward Arrow Button</label
+            >
+            <button
+              id="forward-arrow-btn"
+              class="forward-arrow-btn"
+              aria-label="Forward Arrow"
+            >
+              <img src="./imgs/arrow-right-1.svg" alt="Arrow right" />
             </button>
           </form>
         </section>
@@ -704,15 +706,15 @@
         </div>
         <div class="community-btn">
           <a href="#" class="community-discord-btn">
-            <img
-              src="./imgs/discord-original.svg"
-              alt="Discord"
-            />
+            <img src="./imgs/discord-original.svg" alt="Discord" />
             DISCORD
           </a>
           <a href="#" class="community-whitelist-btn"> WHITELIST NOW </a>
         </div>
         <form class="subscribe-container">
+          <label class="hidden-heading" for="subscribe"
+            >Email Subscription Input</label
+          >
           <input
             type="email"
             id="subscribe"
@@ -720,49 +722,40 @@
             placeholder="Enter your email"
             required
           />
-          <button class="subscribe-btn" type="submit">SUBSCRIBE</button>
+          <label class="hidden-heading" for="subscribe-btn"
+            >Subscribe Button</label
+          >
+          <button class="subscribe-btn" id="subscribe-btn" type="submit">
+            SUBSCRIBE
+          </button>
         </form>
         <ul class="community-social-list">
           <li class="community-social-item">
-            <a href="#"
-              ><img
-                src="./imgs/community-1.svg"
-                alt="x twitter"
+            <a href="#"><img src="./imgs/community-1.svg" alt="x twitter" /></a>
+          </li>
+          <li class="community-social-item">
+            <a href="#" class="social-link"
+              ><img src="./imgs/community-5.svg" alt="facebook"
             /></a>
           </li>
           <li class="community-social-item">
             <a href="#" class="social-link"
-              ><img
-                src="./imgs/community-5.svg"
-                alt="facebook"
+              ><img src="./imgs/community-4.svg" alt="telegram"
             /></a>
           </li>
           <li class="community-social-item">
             <a href="#" class="social-link"
-              ><img
-                src="./imgs/community-4.svg"
-                alt="telegram"
+              ><img src="./imgs/community-3.svg" alt="youtube"
             /></a>
           </li>
           <li class="community-social-item">
             <a href="#" class="social-link"
-              ><img
-                src="./imgs/community-3.svg"
-                alt="youtube"
+              ><img src="./imgs/community-2.svg" alt="tiktok"
             /></a>
           </li>
           <li class="community-social-item">
             <a href="#" class="social-link"
-              ><img
-                src="./imgs/community-2.svg"
-                alt="tiktok"
-            /></a>
-          </li>
-          <li class="community-social-item">
-            <a href="#" class="social-link"
-              ><img
-                src="./imgs/community-6.svg"
-                alt="discord"
+              ><img src="./imgs/community-6.svg" alt="discord"
             /></a>
           </li>
         </ul>
