Added some external links and missing star in community container on catalog-item page

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -55,7 +55,7 @@
         <button class="is-theme">
           <img src="./imgs/light.svg" alt="light and dark mode button" />
         </button>
-        <a href="#" class="discord-btn">
+        <a href="https://discord.com/" target="_blank" class="discord-btn">
           <img src="./imgs/discord-original.svg" alt="discord icon" />
           DISCORD
         </a>
@@ -168,7 +168,7 @@
             </button>
           </form>
           <div class="invitation-container">
-            <a href="#" class="discord-link"
+            <a href="https://discord.com/" target="_blank" class="discord-link"
               ><img src="./imgs/discord-original.svg" alt="DiscordIcon" />JOIN
               DISCORD</a
             >
@@ -276,7 +276,11 @@
           industry.
         </p>
         <div class="community-btn">
-          <a href="#" class="community-discord-btn">
+          <a
+            href="https://discord.com/"
+            target="_blank"
+            class="community-discord-btn"
+          >
             <img src="./imgs/discord-original.svg" alt="Discord" />
             DISCORD
           </a>
@@ -343,7 +347,7 @@
         <p class="footer-copyright">BINABOX 2022 - ALL rights reserved</p>
         <ul class="social-list">
           <li class="social-item">
-            <a href="#"
+            <a href="https://x.com/" target="_blank"
               ><img
                 src="./imgs/community-1.svg"
                 alt="X/Twitter"
@@ -352,7 +356,10 @@
             /></a>
           </li>
           <li class="social-item">
-            <a href="#" class="social-link"
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="social-link"
               ><img
                 src="./imgs/community-5.svg"
                 alt="Facebook"
@@ -361,7 +368,7 @@
             /></a>
           </li>
           <li class="social-item">
-            <a href="#" class="social-link"
+            <a href="https://telegram.org/" target="_blank" class="social-link"
               ><img
                 src="./imgs/community-4.svg"
                 alt="Telegram"
@@ -370,12 +377,15 @@
             /></a>
           </li>
           <li class="social-item">
-            <a href="#" class="social-link"
+            <a
+              href="https://www.youtube.com/"
+              target="_blank"
+              class="social-link"
               ><img src="./imgs/community-3.svg" alt="Youtube" width="20"
             /></a>
           </li>
           <li class="social-item">
-            <a href="#" class="social-link"
+            <a href="https://www.tiktok.com/" target="_blank" class="social-link"
               ><img
                 src="./imgs/community-2.svg"
                 alt="TikTok"
@@ -384,7 +394,7 @@
             /></a>
           </li>
           <li class="social-item">
-            <a href="#" class="social-link"
+            <a href="https://discord.com/" target="_blank" class="social-link"
               ><img src="./imgs/community-6.svg" alt="Discord" width="20"
             /></a>
           </li>
