--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,7 @@
         <button class="is-theme">
           <img src="./imgs/light.svg" alt="light and dark mode button" />
         </button>
-        <a href="#" class="discord-btn">
+        <a href="https://discord.com/" target="_blank" class="discord-btn">
           <img src="./imgs/discord-original.svg" alt="discord icon" />
           DISCORD
         </a>
@@ -470,7 +470,11 @@
           industry.
         </p>
         <div class="community-btn">
-          <a href="#" class="community-discord-btn">
+          <a
+            href="https://discord.com/"
+            target="_blank"
+            class="community-discord-btn"
+          >
             <img src="./imgs/discord-original.svg" alt="Discord" />
             DISCORD
           </a>
@@ -537,7 +541,7 @@
         <p class="footer-copyright">BINABOX 2022 - ALL rights reserved</p>
         <ul class="social-list">
           <li class="social-item">
-            <a href="#"
+            <a href="https://x.com/" target="_blank"
               ><img
                 src="./imgs/community-1.svg"
                 alt="X/Twitter"
@@ -546,7 +550,10 @@
             /></a>
           </li>
           <li class="social-item">
-            <a href="#" class="social-link"
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="social-link"
               ><img
                 src="./imgs/community-5.svg"
                 alt="Facebook"
@@ -555,7 +562,7 @@
             /></a>
           </li>
           <li class="social-item">
-            <a href="#" class="social-link"
+            <a href="https://telegram.org/" target="_blank" class="social-link"
               ><img
                 src="./imgs/community-4.svg"
                 alt="Telegram"
@@ -564,12 +571,15 @@
             /></a>
           </li>
           <li class="social-item">
-            <a href="#" class="social-link"
+            <a
+              href="https://www.youtube.com/"
+              target="_blank"
+              class="social-link"
               ><img src="./imgs/community-3.svg" alt="Youtube" width="20"
             /></a>
           </li>
           <li class="social-item">
-            <a href="#" class="social-link"
+            <a href="https://www.tiktok.com/" target="_blank" class="social-link"
               ><img
                 src="./imgs/community-2.svg"
                 alt="TikTok"
@@ -578,7 +588,7 @@
             /></a>
           </li>
           <li class="social-item">
-            <a href="#" class="social-link"
+            <a href="https://discord.com/" target="_blank" class="social-link"
               ><img src="./imgs/community-6.svg" alt="Discord" width="20"
             /></a>
           </li>
