--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <button class="is-theme">
           <img src="./imgs/light.svg" alt="light and dark mode button" />
         </button>
-        <a href="#" class="discord-btn">
+        <a href="https://discord.com/" target="_blank" class="discord-btn">
           <img src="./imgs/discord-original.svg" alt="discord icon" />
           DISCORD
         </a>
@@ -705,7 +705,7 @@
           </p>
         </div>
         <div class="community-btn">
-          <a href="#" class="community-discord-btn">
+          <a href="https://discord.com/" target="_blank" class="community-discord-btn">
             <img src="./imgs/discord-original.svg" alt="Discord" />
             DISCORD
           </a>
@@ -731,30 +731,30 @@
         </form>
         <ul class="community-social-list">
           <li class="community-social-item">
-            <a href="#"><img src="./imgs/community-1.svg" alt="x twitter" /></a>
+            <a href="https://x.com/" target="_blank"><img src="./imgs/community-1.svg" alt="x twitter" /></a>
           </li>
           <li class="community-social-item">
-            <a href="#" class="social-link"
+            <a href="https://www.facebook.com/" target="_blank" class="social-link"
               ><img src="./imgs/community-5.svg" alt="facebook"
             /></a>
           </li>
           <li class="community-social-item">
-            <a href="#" class="social-link"
+            <a href="https://telegram.org/" target="_blank" class="social-link"
               ><img src="./imgs/community-4.svg" alt="telegram"
             /></a>
           </li>
           <li class="community-social-item">
-            <a href="#" class="social-link"
+            <a href="https://www.youtube.com/" target="_blank" class="social-link"
               ><img src="./imgs/community-3.svg" alt="youtube"
             /></a>
           </li>
           <li class="community-social-item">
-            <a href="#" class="social-link"
+            <a href="https://www.tiktok.com/" target="_blank" class="social-link"
               ><img src="./imgs/community-2.svg" alt="tiktok"
             /></a>
           </li>
           <li class="community-social-item">
-            <a href="#" class="social-link"
+            <a href="https://discord.com/" target="_blank" class="social-link"
               ><img src="./imgs/community-6.svg" alt="discord"
             /></a>
           </li>
