--- a/catalog-item.html
+++ b/catalog-item.html
@@ -385,7 +385,10 @@
             /></a>
           </li>
           <li class="social-item">
-            <a href="https://www.tiktok.com/" target="_blank" class="social-link"
+            <a
+              href="https://www.tiktok.com/"
+              target="_blank"
+              class="social-link"
               ><img
                 src="./imgs/community-2.svg"
                 alt="TikTok"
