--- a/catalog.html
+++ b/catalog.html
@@ -396,7 +396,7 @@
               <li>
                 <div class="nft-content-container">
                   <img src="./imgs/nft-card-2.svg" alt="Item Preview" /><a
-                    href="#"
+                    href="./catalog-item.html"
                     >SKISIRS#2</a
                   >
                 </div>
@@ -579,7 +579,10 @@
             /></a>
           </li>
           <li class="social-item">
-            <a href="https://www.tiktok.com/" target="_blank" class="social-link"
+            <a
+              href="https://www.tiktok.com/"
+              target="_blank"
+              class="social-link"
               ><img
                 src="./imgs/community-2.svg"
                 alt="TikTok"
