--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="#">ROADMAP</a>
           </li>
           <li class="nav-item">
-            <a href="#">COLLECTION</a>
+            <a href="./catalog.html">COLLECTION</a>
           </li>
           <li class="nav-item">
             <a href="#">FAQS</a>
